--- a/templates/home.html
+++ b/templates/home.html
@@ -12,6 +12,11 @@
 
   <div class="wrap">
 
+    <!-- Pro badge -->
+    {% if is_pro %}
+      <div class="pro-badge">Pro</div>
+    {% endif %}
+
     <!-- Brand -->
     <div class="brand">
       <div class="brand-mark">GTJ</div>
