--- a/templates/home.html
+++ b/templates/home.html
@@ -13,7 +13,7 @@
   <div class="wrap">
 
     {% if is_pro %}
-      <div class="pro-badge">Pro</div>
+      <div class="pro-badge">Pro Active</div>
     {% endif %}
 
     <!-- Brand -->
