--- a/templates/home.html
+++ b/templates/home.html
@@ -70,7 +70,7 @@
           </p>
 
           <label>Price</label>
-          <input name="price" placeholder="e.g., $2,450 incl GST" />
+          <input name="price" placeholder="e.g., $2,450 incl GST sucker" />
 
           <label>Tone</label>
           <select name="tone">
